2010-08-23 - G. Giunta (giunta.gaetano@gmail.com

	* jsonrpcs.inc: correct default options param value for php_jsonrpc_encode

2009-09-05 - G. Giunta (giunta.gaetano@gmail.com)

	* jsonrpcs.inc, jsonrpcs.inc: use __METHOD__ constant for error messages
	instead of hardcoded values

	* jsonrpcs.inc: catch exceptions thrown during execution of invoked methods;
	check for $_SERVER having been disabled via php.ini and log an error if so

	* updated Makefiles (sync with base lib)

	* tagged and release as 0.5

2009-08-04 - G. Giunta (giunta.gaetano@gmail.com)

	* xmlrpc/testuite, jsonrpc/testsuite: work when short_open_atgs is on in php.ini

	* jsonrpc/testsuite: work when native json extension is disabled

2009-08-02 - G. Giunta (giunta.gaetano@gmail.com)

	* jsonrpc.inc: fix bad encoding if same object is encoded twice using
	php_jsonrpc_encode; removed some by-ref assignments and declarations

	* json_extension_api.php: added json_last_error() function and the constants
	defined in php 5.3.0

	* json_extension_api.php, xmlrpc_extension_api: work around a php bug to
	determine if native extensions are loaded

	* jsonrpcs.inc: allow 'mixed type' servers (merge from phpxmlrpc 3.0)

	* jsonrpc/testuite: better discrimination of errors

	* xmlrpc/testuite: fix page title

2009-07-26 - G. Giunta (giunta.gaetano@gmail.com)

	* server.php, jsonrpcs.php: remove usage of ereg*() to avoid warnings with php5

	* jsonrpc.inc: 1st try at keeping type info for params of incoming calls,
	so that 'phpvals' type servers can still validate them

2009-07-17 - G. Giunta (giunta.gaetano@gmail.com)

	* xmlrpc_extension_api.inc: fix warnings with php 5.3

2009-07-02 - G. Giunta (giunta.gaetano@gmail.com) thanks Heiko Stuebner

	* fix a missing 'new' call when building string vals in php_jsonrpc_encode

2009-06-23 - G. Giunta (giunta.gaetano@gmail.com)

	* replace all usage of '= & new' with '= new', as this is deprecated in php 5
	and has been shown to cause problems too
