@@ -2,7 +2,7 @@ NAME:
 	PHP-XMLRPC Extras
 
 VERSION:
-	0.5
+	0.5.1
 
 AUTHORS:
 	Gaetano Giunta
