@@ -1,4 +1,8 @@
-2010-08-23 - G. Giunta (giunta.gaetano@gmail.com
+2013-12-22 - G. Giunta (giunta.gaetano@gmail.com)
+
+	* docxmlrpcs.inc: fix opportunity of XSS attack (thanks to sf.net people for reporting it)
+
+2010-08-23 - G. Giunta (giunta.gaetano@gmail.com)
 
 	* jsonrpcs.inc: correct default options param value for php_jsonrpc_encode
 
